--- a/views/index.html
+++ b/views/index.html
@@ -33,7 +33,7 @@
           </div>
           <div>
             <h4>Activities</h4>
-            <select>
+            <select id = 'activitySelector'>
               {% for activity in all_activities %}
               <option>{{ activity.name }}</option>
               {% endfor %}
@@ -54,10 +54,10 @@
         <div class="panel-heading">
           <div class="day-buttons">
             <button class="btn btn-circle day-btn">1</button>
-            <button class="btn btn-circle day-btn">+</button>
+            <button class="btn btn-circle day-btn" id="addDay">+</button>
           </div>
         </div>
-        <div class="panel-body">
+        <div class="panel-body" id="output">
           <div>
             <h4>My Hotel</h4>
             <ul class="list-group" id = "hotelOutput">
@@ -70,7 +70,7 @@
           </div>
           <div>
             <h4>My Activities</h4>
-            <ul class="list-group">
+            <ul class="list-group" id = "activityOutput">
             </ul>
           </div>
         </div>
