--- a/views/index.html
+++ b/views/index.html
@@ -53,7 +53,7 @@
       <div class="panel panel-default">
         <div class="panel-heading">
           <div class="day-buttons">
-            <button class="btn btn-circle day-btn">1</button>
+            <button class="btn btn-circle day-btn numbered" id="1">1</button>
             <button class="btn btn-circle day-btn" id="addDay">+</button>
           </div>
         </div>
